<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="at.walterje.calculator.MainActivity"
    android:orientation="vertical">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal|numberSigned"
            android:ems="10"
            android:id="@+id/inputDividend"
            android:nextFocusDown="@+id/inputDivisor"
            android:layout_weight="1"
            android:hint="@string/string_dividend" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal|numberSigned"
            android:ems="10"
            android:id="@+id/inputDivisor"
            android:layout_weight="1"
            android:hint="@string/string_divisor" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:text="@string/string_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonCalculate" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/output_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textOutput"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:layout_weight="1" />

        <TextView
            android:text="@string/string_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textResult"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>
